# physics-playground

./: CMakeLists.txt  Makefile  README.md
shaders/vulkan/basic/: basic.frag  basic.vert  basic_instanced.vert
shaders/vulkan/physics/: broad_phase.comp
shaders/vulkan/shadow/: shadow.vert  shadow_instanced.vert
shaders/vulkan/sim/: square.comp
shaders/vulkan/simulation/: simulate_instances.comp
src/: main.cpp
src/app/: PlaygroundApp.cpp  PlaygroundApp.h
src/app/demos/: Demo.cpp  Demo.h  PhysicsComparisonDemo.cpp  PhysicsComparisonDemo.h  PhysicsDemo2D.cpp  PhysicsDemo2D.h  PhysicsDemo3D.cpp  PhysicsDemo3D.h  RenderDemo3D.cpp  RenderDemo3D.h
src/app/objects/: ComposedObject3D.cpp  ComposedObject3D.h  RingObject.cpp  SphereArenaObject.cpp  SphereArenaObject.h  SphereObject.cpp  SphereObject.h
src/app/scenes/: PhysicsRingScene.cpp  PhysicsRingScene.h  PhysicsSphereScene3D.cpp  PhysicsSphereScene3D.h  PlaygroundScene.cpp  PlaygroundScene.h
src/engine/assets/loaders/: ObjMeshLoader.cpp  ObjMeshLoader.h
src/engine/core/: Application.cpp  Application.h  ApplicationLayer.h
src/engine/graphics/: GraphicsBackend.h  GraphicsDeviceFactory.cpp  GraphicsDeviceFactory.h  IGraphicsDevice.h
src/engine/graphics/software/: SoftwareGraphicsDevice.cpp  SoftwareGraphicsDevice.h
src/engine/graphics/vulkan/: VulkanGraphicsDevice.cpp  VulkanGraphicsDevice.h
src/engine/input/: Input.cpp  Input.h  InputAction.h  KeyCode.h
src/engine/math/: Matrix4.h  Quaternion.h  Transform.h  Transform3D.h  Vector2.h  Vector3.h
src/engine/physics/: BoxCollider.cpp  BoxCollider.h  BroadPhase.h  Collider.h  CollisionPoints.h  CollisionTests.cpp  CollisionTests.h  GpuBroadPhase.cpp  GpuBroadPhase.h  PhysicsSystem.cpp  PhysicsSystem.h  PlaneCollider.cpp  PlaneCollider.h  RigidBody.h  SapBroadPhase.cpp  SapBroadPhase.h
src/engine/physics/2d/: BallBody2D.h  BallInvertBody2D.h  BorderBoxBody2D.h  BorderCircleBody2D.cpp  BorderCircleBody2D.h  BoxBody2D.h  CollisionSolver2D.cpp  CollisionSolver2D.h  Contact2D.h  Manifold2D.h  Material2D.h  PhysicsBody2D.cpp  PhysicsBody2D.h  PhysicsWorld2D.cpp  PhysicsWorld2D.h  RigidBody2D.h
src/engine/physics/3d/: BallBody3D.h  BorderSphereBody3D.h  PhysicsBody3D.h  PhysicsMaterial3D.h  PhysicsWorld3D.cpp  PhysicsWorld3D.h  RigidBody3D.h
src/engine/platform/: IWindow.h  PlatformFactory.cpp  PlatformFactory.h
src/engine/platform/linux/: X11Window.cpp  X11Window.h
src/engine/render/: Framebuffer.h  RenderMaterial.h
src/engine/render/2d/: DebugRenderer2D.cpp  Object2DIn3D.h  Renderer2D.cpp  Renderer2D.h
src/engine/render/3d/: Camera.h  Camera3D.h  CubeMesh.h  CubeMesh3D.h  Material.h  Material3D.h  ProjectedVertex.h  ProjectedVertex3D.h  RenderUtils3D.h  SceneRenderer3D.cpp  SceneRenderer3D.h  SolidRenderer3D.cpp  SolidRenderer3D.h  WireframeRenderer3D.cpp  WireframeRenderer3D.h
src/engine/render/debug/: DebugSceneComposer3D.h  LightDebug.h  LightDebug3D.h  PhysicsDebug3D.h
src/engine/scene/2d/: Scene2D.cpp  Scene2D.h
src/math/: Vector2.h  Vector3.h
src/physics/: BallBody2D.h  BallInvertBody2D.h  BorderBoxBody2D.h  BorderCircleBody2D.cpp  BorderCircleBody2D.h  CollisionSolver2D.cpp  CollisionSolver2D.h  Contact2D.h  Manifold2D.h  Material2D.h  PhysicsBody2D.cpp  PhysicsBody2D.h  PhysicsWorld2D.cpp  PhysicsWorld2D.h
src/physics/shapes/: CircleShape.cpp  CircleShape.h  RectShape.cpp  RectShape.h  Shape.h
src/platform/: IWindow.h
src/platform/linux/: X11Window.cpp  X11Window.h
src/render/: DebugRenderer2D.cpp  DebugRenderer2D.h  Framebuffer.h  Renderer2D.cpp  Renderer2D.h
src/scene/: Scene2D.cpp  Scene2D.h
(+46 files in other folders)
